# mathematical-expression-parser

./: .gitignore  CMakeLists.txt  README.md  args.c  cleanup.c  eval  eval.h  evaluate.c  evaluate.h  lexer.c  lexer.h  lexer2.c  main.c  makefile  parse_float.c  parse_float.h  parser.c  parser.h  print.c  print.h  print_tree.c  single_file.c  token.h  tree_ops.c
tests/: parentheses.txt  parse-errors1.txt  parse-errors2.txt  parse-errors3.txt  run.sh  simple.txt  single.txt  tree_run.sh
